k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autodeploy-service # Name of this service
spec:
  type: NodePort # Exposes the service on each Node's IP at a static port
  # This lets us access it from outside the cluster
  selector:
    app: autodeploy # Route traffic to pods with this label
  ports:
  - protocol: TCP
    port: 80 # Port the service listens on inside the cluster
    targetPort: 8000 # Port on the pod to forward traffic to
    nodePort: 30080 # External port on the Minikube node (30000-32767)
